--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-CairoSVG==0.5
 Flask==0.9
 Flask-Bcrypt==0.5.2
 Flask-Bootstrap==2.2.1-1
@@ -15,24 +14,23 @@ Jinja2==2.6
 ProxyTypes==0.9
 SQLAlchemy==0.8.0b2
 WTForms==1.0.2
-WeasyPrint==0.16
 Werkzeug==0.8.3
 blinker==1.2
 boto==2.6.0
-cssselect==0.7.1
 distribute==0.6.27
 fdfgen==0.10.0
-geopy==0.94.2
+geopy==0.95
+gunicorn==0.17.4
 itsdangerous==0.17
-lxml==3.1beta1
+openpyxl==1.6.1
 passlib==1.6.1
 psycopg2==2.4.6
 py-bcrypt==0.2
 python-cloudfiles==1.7.10
 python-dateutil==2.1
 python-loaders==0.2.3
+redis==2.7.2
 requests==1.0.4
 six==1.2.0
 stripe==1.7.7
-tinycss==0.3
 wsgiref==0.1.2
